# RotationalUnfolding

./: .gitignore  README.md  compile_commands.json  requirements.txt
.claude/: comment-revision-log.md
apps/: Makefile  README.md  run_draw_partial_unfolding.py  run_exact_overlap_checker.py  run_generate_exact_expressions.py  run_generate_path_lists.py  run_isomorphic_remover.py  run_setup_root_paths.py
apps/test/: Makefile  generate_input.py  make_ini.py  run_draw_partial_unfolding.py  run_exact_overlap_checker.py  run_generate_path_lists.py  run_isomorphic_remover.py  run_setup_root_paths.py  run_ufd_to_svg.py  test.cpp
cpp/: Makefile  test_json_output.jsonl
cpp/include/: FaceState.hpp  GeometryUtil.hpp  IOUtil.hpp  JsonUtil.hpp  Polyhedron.hpp  RotationalUnfolding.hpp
docs/: DRAWING_UTILITY.md  PHASE1_RUN.md  PHASE2_NONISO.md  PHASE3_EXACT.md  RUN_ALL.md  RotationalUnfolding.md  classes.md  constants.md  functions.md
include/polyhedron_base/: GeometryUtil.hpp  IOUtil.hpp  Polyhedron.hpp
include/rotational_unfolding/: FaceState.hpp  GeometryUtil.hpp  IOUtil.hpp  Polyhedron.hpp  RitationalUnfolding.hpp  RotationalUnfolding.hpp  (+2 more)
python/: README.md  poly_resolve.py  setup.py
reorg/: README.md
reorg/cpp/: CMakeLists.txt  rotunfold
reorg/cpp/include/: IOUtil.hpp  RotationalUnfolding.hpp  UnfoldedFace.hpp
reorg/cpp/src/: main.cpp
scripts/: draw_partial_unfolding.py  exact_overlap_checker.py  generate_exact_expressions.py  generate_input.py  generate_path_lists.py  isomorphic_remover.py  setup_root_paths.py  ufd_to_svg.py
tools/: batch_convert_all.sh
(+1584 files in other folders)
